fixed uneven alignment of checkboxes in fundraiser

--- a/app/assets/stylesheets/member-facing/fundraiser.scss
+++ b/app/assets/stylesheets/member-facing/fundraiser.scss
@@ -330,7 +330,6 @@
       }
       .Checkbox {
         line-height: 16px;
-        margin: 0;
       }
       label.Checkbox__label {
         display: block;
